<resources>
    <string name="app_name">OCR_Demo</string>
    <string name="enter_new_machine_code">enter machine code</string>
    <string name="enter_new_box_code">enter box code</string>
    <string name="enter_new_sim_code">enter sim code</string>
    <string name="add">添加</string>
    <string name="export">导出</string>
    <string name="click_to_remove">Click a note to remove it</string>
    <string name="rationale_camera">需要相机权限</string>
    <string name="rationale_storage_contacts">需要SD卡和联系人权限</string>


    <string name="basic_settings">设置</string>
    <string name="basic_help">帮助</string>
    <string name="basic_string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="basic_quit">退出</string>
    <string name="get_permission">"权限申请"</string>
    <string name="quit">退出</string>
    <string name="settings">去设置</string>

    <string name="permission_request_denied">Permission request denied</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
</resources>
